--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "clsx": "^2.1.1",
+    "i18next": "^25.7.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.70.0",
+    "react-i18next": "^16.5.1",
     "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0",
     "yup": "^1.7.1"
